# wildberries_parser

./: .env_example  README.md  docker-compose.yml
backend/: .dockerignore  .env_example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: settings.py  urls.py
backend/scripts/: entrypoint.sh
backend/wb_parser/: filters.py  models.py  serializers.py  urls.py  views.py
backend/wb_parser/migrations/: 0001_initial.py
backend/wb_parser/utils/: parser.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: ProductsTable.vue
